--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "vite build --mode porduction",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
