--- a/data/projects.json
+++ b/data/projects.json
@@ -10,7 +10,7 @@
         "viewOnPlatforms": [
             {
                 "id": "web",
-                "url": "https://satishkhanal76.github.io/Chess/"
+                "url": "https://satishkhanal.com/chess/"
             },
             {
                 "id": "github",
@@ -29,7 +29,7 @@
         "viewOnPlatforms": [
             {
                 "id": "web",
-                "url": "https://satishkhanal76.github.io/POS/"
+                "url": "https://satishkhanal.com/POS/"
             },
             {
                 "id": "github",
@@ -48,7 +48,7 @@
         "viewOnPlatforms": [
             {
                 "id": "web",
-                "url": "https://satishkhanal76.github.io/Tic-Tac-Toe/"
+                "url": "https://satishkhanal.com/Tic-Tac-Toe/"
             },
             {
                 "id": "github",
@@ -67,7 +67,7 @@
         "viewOnPlatforms": [
             {
                 "id": "web",
-                "url": "https://satishkhanal76.github.io/Travel-Agency-Website/"
+                "url": "https://satishkhanal.com/Travel-Agency-Website/"
             },
             {
                 "id": "github",
@@ -86,7 +86,7 @@
         "viewOnPlatforms": [
             {
                 "id": "web",
-                "url": "https://satishkhanal76.github.io/FlappyBird/"
+                "url": "https://satishkhanal.com/Flappy-Bird/"
             },
             {
                 "id": "github",
